Highlight today by default

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <form name="filter" action="">
         <label for="date">Date</label>
         <div class="options" id="date">
-          <input type="radio" name="date" value="all_week" id="date-all_week" checked><label for="date-all_week">All week</label>
+          <input type="radio" name="date" value="all_week" id="date-all_week"><label for="date-all_week">All week</label>
         </div>
 
         <label for="ticketed_events">Ticketed</label>
