Link Github in footer

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
     <main id="map"></main>
     <footer>
       <ul>
-        <li class="data-source">Data from <a href="https://openhouselondon.open-city.org.uk/">Open House London</a></li>
+        <li class="data-source">Listings from <a href="https://openhouselondon.open-city.org.uk/">Open House London</a></li>
+        <li class="code">Code &amp; data <a href="https://github.com/Jonty/open-house-london-data">on Github</a></li>
         <li class="report-bug"><a href="https://github.com/Jonty/open-house-london-data/issues/new/choose">Report a bug</a></li>
       </ul>
     </footer>
