--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Open House London booking</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com"/>
-    <link href="main.css" rel="stylesheet"/>
+    <link href="main.css?1" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet"/>
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.4.1/mapbox-gl.css" rel="stylesheet"/>
     <script defer src="https://api.mapbox.com/mapbox-gl-js/v2.4.1/mapbox-gl.js"></script>
