Make date field scrollable on mobile

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <form name="filter" action="">
         <fieldset>
           <label for="date">Date</label>
-          <div class="options" id="date">
+          <div class="options scrollable scroll-x" id="date">
           </div>
         </fieldset>
 
