Add time range slider

--- a/index.html
+++ b/index.html
@@ -40,13 +40,49 @@
           </div>
         </fieldset>
 
-        <!--
-        <div class="collapse">
-          <label>Start time</label>
-          <label>End time</label>
+        <fieldset>
+          <label for="from_time">Time</label>
           <div class="time-graph"></div>
-        </div>
-        -->
+          <timerange>
+            <div class="time-text">00:00-24:00</div>
+            <input id="from_time" type="range" value=0 min=0 max=25 step=0.5 list="time-ticks"/>
+            <input id="to_time" type="range" value=0 min=0 max=25 step=0.5 list="time-ticks"/>
+            <datalist id="time-ticks">
+              <option value="0"></option>
+              <option value="1"></option>
+              <option value="2"></option>
+              <option value="3"></option>
+              <option value="4"></option>
+              <option value="5"></option>
+              <option value="6"></option>
+              <option value="7"></option>
+              <option value="8"></option>
+              <option value="9"></option>
+              <option value="10"></option>
+              <option value="11"></option>
+              <option value="12"></option>
+              <option value="13"></option>
+              <option value="14"></option>
+              <option value="15"></option>
+              <option value="16"></option>
+              <option value="17"></option>
+              <option value="18"></option>
+              <option value="19"></option>
+              <option value="20"></option>
+              <option value="21"></option>
+              <option value="22"></option>
+              <option value="23"></option>
+              <option value="24"></option>
+            </datalist>
+            <div class="time-labels">
+              <span>00:00</span>
+              <span>06:00</span>
+              <span>12:00</span>
+              <span>18:00</span>
+              <span>24:00</span>
+            </div>
+          </timerange>
+        </fieldset>
       </form>
     </header>
     <main id="map"></main>
