Fix timerange on Firefox

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
           <div class="time-graph"></div>
           <timerange>
             <div class="time-text">00:00-24:00</div>
-            <input id="from_time" type="range" value=0 min=0 max=25 step=0.5 list="time-ticks"/>
-            <input id="to_time" type="range" value=0 min=0 max=25 step=0.5 list="time-ticks"/>
+            <input id="from_time" type="range" value="0" min="0" max="25" step="0.5"/>
+            <input id="to_time" type="range" value="0" min="0" max="25" step="0.5"/>
             <datalist id="time-ticks">
               <option value="0"></option>
               <option value="1"></option>
