--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
             </div>
           </timerange>
         </fieldset>
+        <button class="connect-google">Connect to Google</button>
+        <div class="google-state"></div>
       </form>
     </header>
     <main id="map"></main>
