--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </div>
           </timerange>
         </fieldset>
-        <button class="connect-google">Connect to Google</button>
+        <button class="connect-google"><img width=20px height=20px src="assets/google-drive-icon-220px.png"/> Connect</button>
         <div class="google-state"></div>
       </form>
     </header>
