Add text search

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
         </fieldset>
 
         <fieldset>
+          <label for="search">Search</label>
+          <input id="search" type="text" placeholder="Brutalist" name="search">
+          </div>
+        </fieldset>
+
+        <fieldset>
           <label for="ticketed_events">Ticketed</label>
           <div class="options" id="ticketed_events">
             <input type="radio" name="ticketed_events" value="yes" id="ticketed_events-yes"><label for="ticketed_events-yes">Yes</label>
