Add new venue filter

--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
         </fieldset>
 
         <fieldset>
+          <label for="new_venue_this_year">New</label>
+          <div class="options" id="new_venue_this_year">
+            <input type="radio" name="new_venue_this_year" value="yes" id="new_venue_this_year-yes"><label for="new_venue_this_year-yes">Yes</label>
+            <input type="radio" name="new_venue_this_year" value="no" id="new_venue_this_year-no"><label for="new_venue_this_year-no">No</label>
+            <input type="radio" name="new_venue_this_year" value="any" id="new_venue_this_year-any" checked><label for="new_venue_this_year-any">Any</label>
+          </div>
+        </fieldset>
+
+        <fieldset>
           <label for="ticketed_events">Ticketed</label>
           <div class="options" id="ticketed_events">
             <input type="radio" name="ticketed_events" value="yes" id="ticketed_events-yes"><label for="ticketed_events-yes">Yes</label>
