--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link href="assets/main.css?4" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet"/>
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.4.1/mapbox-gl.css" rel="stylesheet"/>
+    <link rel="preload" as="image" href="assets/bookmark-icon.svg">
+    <link rel="preload" as="image" href="assets/bookmark-icon-selected.svg">
+    <link rel="preload" as="image" href="assets/double-arrow-up.svg">
     <script defer src="https://api.mapbox.com/mapbox-gl-js/v2.4.1/mapbox-gl.js"></script>
     <script defer src="assets/main.js?4"></script>
   </head>
