Update website address

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
     <main id="map"></main>
     <footer>
       <ul>
+        <li class="data-source">An <a href="https://infrastructureclub.co.uk/">Infrastructure Club</a> project</li>
         <li class="data-source">Listings from <a href="https://openhouselondon.open-city.org.uk/">Open House London</a></li>
         <li class="code">Code &amp; data <a href="https://github.com/Jonty/open-house-london-data">on Github</a></li>
         <li class="report-bug"><a href="https://github.com/Jonty/open-house-london-data/issues/new/choose">Report a bug</a></li>
