Fix page title and OH naming

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Open House London booking</title>
+    <title>London Open House Festival map</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com"/>
     <link href="assets/main.css?5" rel="stylesheet"/>
@@ -132,7 +132,7 @@
     <footer>
       <ul>
         <li class="data-source">An <a href="https://infrastructureclub.co.uk/">Infrastructure Club</a> project</li>
-        <li class="data-source">Listings from <a href="https://openhouselondon.open-city.org.uk/">Open House London</a></li>
+        <li class="data-source">Listings from <a href="https://openhouselondon.open-city.org.uk/">London Open House</a></li>
         <li class="code">Code &amp; data <a href="https://github.com/Jonty/open-house-london-data">on Github</a></li>
         <li class="report-bug"><a href="https://github.com/Jonty/open-house-london-data/issues/new/choose">Report a bug</a></li>
       </ul>
