Add fades to the date selector

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
       <form name="filter" action="">
         <fieldset>
           <label for="date">Date</label>
-          <div class="options scrollable scroll-x" id="date">
-          </div>
+          <div class="options scrollable scroll-x" id="date"></div>
         </fieldset>
 
         <fieldset>
