Add clear button to search box

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <fieldset>
           <label for="search">Search</label>
-          <input id="search" type="text" placeholder="Brutalist" name="search">
+          <input id="search" type="search" placeholder="Brutalist" name="search">
           </div>
         </fieldset>
 
