Rework Google integration
- store config including spreadsheetId in appDataFolder
- pass the user's email to allow non-interactive reauth
- handle auth expiry gracefully
- warn on navigation if syncing
- remove the now redundant Connect dropdown

--- a/index.html
+++ b/index.html
@@ -32,14 +32,10 @@
         </fieldset>
 
         <fieldset>
-          <div class="connect-google">
-            <button type="button" class="google-new">
+          <div class="google">
+            <button type="button" class="google-connect">
               Connect
             </button>
-            <input type="checkbox" class="button-down" id="connect-google-down" aria-haspopup="menu" aria-label="Other Google options"/><label for="connect-google-down"></label>
-            <div class="button-menu">
-              <button type="button" class="google-existing">Open existing</button>
-            </div>
             <button type="button" class="google-status">
               Loading
             </button>
